# json_decode_streaming

./: .gitignore  Makefile  README.md  composer.json  go.mod
.cursor/commands/: ui.md
.cursor/rules/: env-rule.mdc  md-rule.mdc  test-rule.mdc
.github/workflows/: release.yml
docs/: incremental-mode.md  publish.md  readme-zh.md  spec.md  test-cases.md
golang/: repair_json.go
javascript/: package.json  repairJson.js
php/: RepairJson.php  composer.json
python/: README.txt  pyproject.toml  repair_json.py
scripts/: release-build.sh  release-check.sh  release-publish.sh  setup-release-secrets.sh  sync-version.sh
test/: cases.json  test-ai-stream-curl.sh  test-ai-stream-go.go  test-ai-stream-javascript.js  test-ai-stream-php.php  test-ai-stream-python.py  test-bench-go-append.go  test-bench-go.go  test-bench-javascript-append.js  test-bench-javascript.js  test-bench-php.php  test-bench-python-incremental-memory.py  test-bench-python.py  test-cache-config-go.go  test-cache-config-javascript.js  test-case-stats.py  test-fuzz-python.py  test-go.go  test-javascript.js  test-php.php  test-python-incremental.py  test-python.py  test-sync-cases.py
